pad: use new segment offset method to apply the offset

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=721422